--- a/index.html
+++ b/index.html
@@ -114,5 +114,19 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+    // 注册Service Worker
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js')
+                .then(registration => {
+                    console.log('SW registered: ', registration);
+                })
+                .catch(registrationError => {
+                    console.log('SW registration failed: ', registrationError);
+                });
+        });
+    }
+    </script>
 </body>
 </html>
